--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,133 @@
 @font-face {
     font-family: myFirstFont;
-    src: url(binochatan.ttf);
+    src: url(/fonts/binochatan.ttf);
+}
+
+
+body{
+    background-image: linear-gradient(to bottom right, black, #292827);
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: myFirstFont;
+
+}
+
+.header{
+    height: 20vh;
+    width: 100%;
+}
+
+.middle{
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.middle .left{
+    height: 100%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.middle .left .lefttop{
+    width: 100%;
+    min-height: 0;
+    height: auto;
+    align-self: flex-start;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.middle .left .lefttop img{
+    height: 70%;
+}
+
+.middle .left .lefttop h1{
+    color: white;
+    font-size: 4em;
+}
+
+.middle .left .leftbottom{
+    flex-basis: auto;
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-top: 3%;
+}
+
+.middle .left .leftbottom a{
+    font-size: 2em;
+    color: white;
+    line-height: 1em;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 30%;
+    padding-right: 30%;
+    border-radius: 25px;
+    border: 2px solid #404040;
+    white-space: nowrap;
+}
+
+.middle .right{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.middle .right .righttop{
+    height: 50%;
+}
+
+
+.middle .right .rightbottom {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.middle .right .rightbottom .contact, .links, .socials{
+    display: flex;
+    justify-content: space-around;
+}
+
+li{
+    text-decoration: none;
+    list-style: none;
+    color: white;
+}
+
+.middle .right .rightbottom .contact a, .links a, .socials a{
+
+    color: white;
+    padding: 9px;
+    border-radius: 25px;
+    border: 2px solid #404040;
+    text-shadow: 0 0 0 white, 0 0.0625em 0 grey,0 0.125em 0 rgba(128,128,128,0.5);
+}
+
+
+.footer{
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.footer .projs{
+    border: 4px solid #404040;
+    border-radius: 20px;
+    margin-left: 3%;
+    width: 20%;
+    height: 60%;
 }
