--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ li{
     width: 20%;
     height: 50%;
     color: white;
-    background-color: black;
+    background-color: #171717;
 }
 
 .footer .first{
@@ -182,6 +182,12 @@ li{
     margin-bottom: 3%;
     display: flex;
     justify-content: center;
+}
+
+.footer .first .top a{
+    color: white;
+    font-size: 26px;
+    font-weight: bolder;
 }
 
 .footer .first .bottom .image img{
@@ -204,3 +210,50 @@ li{
 .footer .first .bottom .desc{
     width: 50%;
 }
+
+
+
+
+
+
+.footer .second .top{
+    width: 100%;
+    height: min-content;
+    margin-bottom: 3%;
+    display: flex;
+    justify-content: center;
+}
+
+.footer .second .top a{
+    color: white;
+    font-size: 26px;
+    font-weight: bolder;
+}
+
+.footer .second .bottom .image img{
+    height: 90px;
+    border-radius: 25px;
+    filter: grayscale(100%);
+}
+
+.footer .second .bottom{
+    display: flex;
+    height: auto;
+    width: 100%;
+    justify-content: center;
+}
+
+.footer .second .bottom .image{
+    width: 40%;
+}
+
+.footer .second .bottom .desc{
+    width: 50%;
+}
+
+.footer .second .bottom .image img{
+    height: 90px;
+    border-radius: 25px;
+    filter: grayscale(100%);
+}
+
