--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,7 @@ li{
     .footer .projs{
         width: 40%;
         justify-content: center;
+        padding: 0;
     }
 
     .footer .projs p{
@@ -296,7 +297,7 @@ li{
     body{
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 100%;
     }
 
     
