--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ li{
     body{
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: 100vh;
     }
 
     
