--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,9 @@ li{
     .middle .right .rightbottom li{
         margin-right: 10%;
     }
-
+    html{
+        height: 100vh;
+    }
     body{
         display: flex;
         flex-direction: column;
