--- a/styles.css
+++ b/styles.css
@@ -273,10 +273,12 @@ li{
     .footer{
         margin-top: 30%;
         display: flex;
+        flex-direction: row;
     }
 
     .footer .projs {
         width: 40%;
+        height: max-content;
         padding: 0;
     }
 
@@ -292,6 +294,7 @@ li{
     .footer img{
         padding: 0;
         margin: 0;
+        display: none;
     }
 
     .footer .projs p{
