--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -27,6 +27,7 @@ ul.horizontal-list {
   align-items: center;
   background-color: var(--bg-secondary);
   margin-bottom: 0.8em;
+  border-radius: 25px;
 
   .header {
     color: var(--links);
