--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -21,13 +21,13 @@ ul.horizontal-list {
   padding: 1em;
   border: 1px var(--text) solid;
   width: 11em;
-  height: 11em;
+  height: auto;
   text-align: center;
   font-size: 1em;
   align-items: center;
   background-color: var(--bg-secondary);
   margin-bottom: 0.8em;
-  border-radius: 25px;
+  border-radius: 0.5em;
 
   .header {
     color: var(--links);
