--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -116,10 +116,18 @@ html {
 html[data-theme="dark"] {
   @include dark-appearance;
 }
+html[data-theme="light"] {
+  @include light-appearance;
+}
 
 @media (prefers-color-scheme: dark) {
   body[data-theme="auto"] {
     @include dark-appearance;
+  }
+}
+@media (prefers-color-scheme: light) {
+  body[data-theme="auto"] {
+    @include light-appearance;
   }
 }
 // -------------------------------------------- //
