--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -87,18 +87,16 @@ img {
   display: block;
   margin: 0 auto;
 }
-@mixin light-appearance {
-  html, body {
-      --bg: #FFF;
-      --bg-secondary: #f3f4f6;
-      --headings: #1e293b;
-      --text: #374151;
-      --text-secondary: #6b7280;
-      --links: #6366f1;
-      --highlight: #FFECB2; // light yellow
-      --code-text: #9D174D;
-      --share-text: #999;
-  }
+html {
+  --bg: #fff;
+  --bg-secondary: #f8f8f8;
+  --headings: #000;
+  --text: #333;
+  --text-secondary: #000;
+  --links: blue;
+  --highlight: #ffecb2; // light yellow
+  --code-text: #9d174d;
+  --share-text: #999;
 }
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
@@ -118,20 +116,20 @@ img {
 html[data-theme="dark"] {
   @include dark-appearance;
 }
-html[data-theme="light"] {
-  @include light-appearance;
-}
+// html[data-theme="light"] {
+//   @include light-appearance;
+// }
 
 @media (prefers-color-scheme: dark) {
   body[data-theme="auto"] {
     @include dark-appearance;
   }
 }
-@media (prefers-color-scheme: light) {
-  body[data-theme="auto"] {
-    @include light-appearance;
-  }
-}
+// @media (prefers-color-scheme: light) {
+//   body[data-theme="auto"] {
+//     @include light-appearance;
+//   }
+// }
 // -------------------------------------------- //
 
 html,
