--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,12 +27,12 @@
   <title>{{ title }}</title>
 
   <!-- OG -->
-  <meta name="profile:first_name" content="Zhixiang">
-  <meta name="profile:last_name" content="Teoh">
-  <meta name="profile:username" content="zhixiangteoh">
+  <meta name="profile:first_name" content="Aaron">
+  <meta name="profile:last_name" content="Alvarez">
+  <meta name="profile:username" content="aaron10l">
   <meta name="og:title" content="{{ title }}">
   <meta name="og:type" content="website">
-  <meta property="og:image" content="https://teohzhixiang.com/images/favicon/android-chrome-512x512.png">
+  <meta property="og:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.png">
   <meta name="og:description" content="{{ site.description }}">
   <meta name="og:locale" content="en_US">
   <meta name="og:site_name" content="{{ site.title }}">
@@ -41,9 +41,9 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ site.description }}">
-  <meta name="twitter:image" content="https://teohzhixiang.com/images/favicon/android-chrome-512x512.png">
-  <meta name="twitter:creator" content="@zhixiangteoh">
-  <meta name="twitter:site" content="@zhixiangteoh">
+  <meta name="twitter:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.png">
+  <meta name="twitter:creator" content="@aaron10l">
+  <meta name="twitter:site" content="@aaron10l">
 
   {% feed_meta %}
 
