--- a/_includes/date_and_social_share.html
+++ b/_includes/date_and_social_share.html
@@ -5,9 +5,9 @@
   {% if site.theme_config.show_soopr  %}
     <span class="share">Share </span>
     <span class="soopr-btn soopr-btn-sm"
-      data-twitter="zhixiangteoh"
-      data-facebook="teoh.zhixiang"
-      data-linkedin=""
+      data-twitter="aaron10l"
+      data-facebook=""
+      data-linkedin="aaronisme"
       data-text="{{ page.title }}"
       data-url="{{ site.url }}/{{ page.url }}">
     </span>
