--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,9 @@
   <meta name="author" content="{{ site.author }}">
   <meta name="application-name" content="{{ site.title }}">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="/images/favicon/mstile-150x150.png">
+  <meta name="msapplication-TileImage" content="/images/favicon/mstile-150x150.pngDELETEE">
   <meta name="msapplication-tooltip" content="{{ site.description }}">
-  <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
+  <meta name="msapplication-config" content="/images/favicon/browserconfig.xmlDELETEE">
   <meta name="theme-color" content="#ffffff">
 
   {% if page.title %}
