--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
   <meta name="profile:username" content="aaron10l">
   <meta name="og:title" content="{{ title }}">
   <meta name="og:type" content="website">
-  <meta property="og:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.png">
+  <meta property="og:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.pngDELETEE">
   <meta name="og:description" content="{{ site.description }}">
   <meta name="og:locale" content="en_US">
   <meta name="og:site_name" content="{{ site.title }}">
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ site.description }}">
-  <meta name="twitter:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.png">
+  <meta name="twitter:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.pngDELETEE">
   <meta name="twitter:creator" content="@aaron10l">
   <meta name="twitter:site" content="@aaron10l">
 
