--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,20 +3,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.pngDELETEE">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.pngDELETEE">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.pngDELETEE">
-  <link rel="shortcut icon" href="/images/favicon/favicon.icoDELETEE">
-  <link rel="manifest" href="/images/favicon/site.webmanifestDELETEE">
-  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svgDELETEE" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
+  <link rel="manifest" href="/images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
 
   <meta name="description" content="{{ site.description }}"">
   <meta name="author" content="{{ site.author }}">
   <meta name="application-name" content="{{ site.title }}">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="/images/favicon/mstile-150x150.pngDELETEE">
+  <meta name="msapplication-TileImage" content="/images/favicon/mstile-150x150.png">
   <meta name="msapplication-tooltip" content="{{ site.description }}">
-  <meta name="msapplication-config" content="/images/favicon/browserconfig.xmlDELETEE">
+  <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
   {% if page.title %}
@@ -32,7 +32,7 @@
   <meta name="profile:username" content="aaron10l">
   <meta name="og:title" content="{{ title }}">
   <meta name="og:type" content="website">
-  <meta property="og:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.pngDELETEE">
+  <meta property="og:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.png">
   <meta name="og:description" content="{{ site.description }}">
   <meta name="og:locale" content="en_US">
   <meta name="og:site_name" content="{{ site.title }}">
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ site.description }}">
-  <meta name="twitter:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.pngDELETEE">
+  <meta name="twitter:image" content="https://aaronalvarez.me/images/favicon/android-chrome-512x512.png">
   <meta name="twitter:creator" content="@aaron10l">
   <meta name="twitter:site" content="@aaron10l">
 
